@@ -345,6 +345,7 @@ All functions are idempotent: when run multiple times with the same arguments, y
 * Uninstall-CService now kills a service's process when that service stops but is actually still running. This should decrease the frequency of needing to reboot a computer when uninstalling a service.
 * Added `C` prefix to all Carbon commands, with aliases from old command names to new ones to maintain backwards compatability. 
 * Added `bin\Use-CarbonPrefix.ps1` script to Carbon that will update files to use the new Carbon function names.
+* `Get-CCertificate`: Added `Path` note property to returned objects.
 '@
         } # End of PSData hashtable
     
