@@ -1,6 +1,9 @@
 # 2.7.0
 
 * Uninstall-Service now kills a service's process when that service stops but is actually still running. This should decrease the frequency of needing to reboot a computer when uninstalling a service.
+* Added `C` prefix to all Carbon commands, with aliases from old command names to new ones to maintain backwards compatability. 
+* Added `bin\Use-CarbonPrefix.ps1` script to Carbon that will update files to use the new Carbon function names.
+* `Get-CCertificate`: Added `Path` note property to returned objects.
 
 # 2.6.0
 
